@@ -5,8 +5,6 @@ import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMa
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 import ru.home.projects.nasaphototelegrambot.service.SendBotMessageService;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class MarsCommand implements Command {
@@ -22,12 +20,14 @@ public class MarsCommand implements Command {
 
     @Override
     public void execute(Update update) {
+        InlineKeyboardMarkup inlineKeyboardMarkup = getInlineKeyboardMarkup();
+        messageService.sendMessage(update.getMessage().getChatId().toString(), MARS_MESSAGE, inlineKeyboardMarkup);
+    }
 
+    private InlineKeyboardMarkup getInlineKeyboardMarkup() {
         InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
-        List<List<InlineKeyboardButton>> keyboard = new ArrayList<>();
-        keyboard.add(
-                Arrays.asList(
-                        InlineKeyboardButton.builder()
+        List<List<InlineKeyboardButton>> keyboard = List.of(
+                List.of(InlineKeyboardButton.builder()
                                 .text("Curiosity")
                                 .callbackData("curiosity")
                                 .build(),
@@ -38,10 +38,8 @@ public class MarsCommand implements Command {
                         InlineKeyboardButton.builder()
                                 .text("Spirit")
                                 .callbackData("spirit")
-                                .build())
-        );
+                                .build()));
         inlineKeyboardMarkup.setKeyboard(keyboard);
-        messageService.sendMessage(update.getMessage().getChatId().toString(), MARS_MESSAGE, inlineKeyboardMarkup);
-
+        return inlineKeyboardMarkup;
     }
 }
