@@ -5,8 +5,6 @@ import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMa
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 import ru.home.projects.nasaphototelegrambot.service.SendBotMessageService;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class SubscribeCommand implements Command {
@@ -18,16 +16,18 @@ public class SubscribeCommand implements Command {
     }
 
     public final static String SUBSCRIBE_MESSAGE = "Нажав кнопку <b>\"Подписаться\"</b> вам будет каждый день в 14:00 по мск приходить фото дня.\n" +
-                    "Кнопка \"Отменить подписку\" отменяет данную подписку";
+            "Кнопка \"Отменить подписку\" отменяет данную подписку";
 
     @Override
     public void execute(Update update) {
+        InlineKeyboardMarkup inlineKeyboardMarkup = getInlineKeyboardMarkup();
+        messageService.sendMessage(update.getMessage().getChatId().toString(), SUBSCRIBE_MESSAGE, inlineKeyboardMarkup);
+    }
 
+    private InlineKeyboardMarkup getInlineKeyboardMarkup() {
         InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
-        List<List<InlineKeyboardButton>> keyboard = new ArrayList<>();
-        keyboard.add(
-                Arrays.asList(
-                        InlineKeyboardButton.builder()
+        List<List<InlineKeyboardButton>> keyboard = List.of(
+                List.of(InlineKeyboardButton.builder()
                                 .text("Подписаться")
                                 .callbackData("subscribe")
                                 .build(),
@@ -37,7 +37,6 @@ public class SubscribeCommand implements Command {
                                 .build())
         );
         inlineKeyboardMarkup.setKeyboard(keyboard);
-
-        messageService.sendMessage(update.getMessage().getChatId().toString(), SUBSCRIBE_MESSAGE, inlineKeyboardMarkup);
+        return inlineKeyboardMarkup;
     }
 }
